--- a/solar.html
+++ b/solar.html
@@ -44,6 +44,7 @@
         table
         {
             background-color:black;
+	   
             width:100%;
             height:150px;
         }
@@ -97,7 +98,7 @@ var x = setInterval(function() {
       <h3 class="subheader">About the Eclipse</h3>
       <p color="yellow" style=font-size:30px;> On Monday, August 21, 2017, all of North America will be treated to an eclipse of the sun. Anyone within the path of totality can see one of nature’s most awe-inspiring sights - a total solar eclipse. This path, where the moon will completely cover the sun and the sun's tenuous atmosphere - the corona - can be seen, will stretch from Lincoln Beach, Oregon to Charleston, South Carolina. Observers outside this path will still see a partial solar eclipse where the moon covers part of the sun's disk. Everyone in North America plus parts of South America, Africa, and Europe will see at least a partial solar eclipse, while the thin path of totality will pass through portions of 14 states. This celestial event is a solar eclipse in which the moon passes between the sun and Earth and blocks all or part of the sun for up to about three hours, from beginning to end, as viewed from a given location.  For this eclipse, the longest period when the moon completely blocks the sun from any given location along the path will be about two minutes and 40 seconds. The last time the contiguous U.S. saw a total eclipse was in 1979, but people will be able to see it on August 22nd 2017!You can see a partial eclipse, where the moon covers only a part of the sun, anywhere in North America. To see a total eclipse, where the moon fully covers the sun for a short few minutes, you must be in the path of totality. The path of totality is a relatively thin ribbon, around 70 miles wide, that will cross the U.S. from West to East.  The first point of contact will be at Lincoln Beach, Oregon at 9:05 a.m. PDT. Totality begins there at 10:16 a.m. PDT.  Over the next hour and a half, it will cross through Oregon, Idaho, Wyoming, Montana, Nebraska, Iowa, Kansas, Missouri, Illinois, Kentucky, Tennessee, Georgia, and North and South Carolina.  The total eclipse will end near Charleston, South Carolina at 2:48 p.m. EDT.  From there the lunar shadow leaves the United States at 4:09 EDT.  Its longest duration will be near Carbondale, Illinois, where the sun will be completely covered for two minutes and 40 seconds. You never want to look directly at the sun without appropriate protection except during totality.  That could severely hurt your eyes.  However, there are many ways to safely view an eclipse of the sun including direct viewing – which requires some type of filtering device and indirect viewing where you project an image of the sun onto a screen. Both methods should produce clear images of the partial phase of an eclipse.</p>
       <br>
-      <p class="gradient" style=font-size:30px;>For more information, please go to this link:<a href="https://www.space.com/33797-total-solar-eclipse-2017-guide.html" target="_blank">Here</a></p>
+      <p  style=font-size:30px;>For more information, please go to this link:<a href="https://www.space.com/33797-total-solar-eclipse-2017-guide.html" target="_blank">Here</a></p>
       <br>
       <hr>
       <h2 style="font-size:70px; color:red;">Live Timer Until Eclipse Starts</h2>
@@ -112,7 +113,7 @@ var x = setInterval(function() {
       <hr>
       <br>
       <h2 class="subheader">Table of ways to protect your eyes</h2>
-      <table border="2">
+      <table border="2" style="color:red">
           <thead>
               <tr>
                   <th>Type</th>
@@ -138,13 +139,13 @@ var x = setInterval(function() {
               </tr>
           </tbody>
       </table>
-      <p class="gradient" style="font-size:30px; align:center;">For more information please click <a href="https://www.exploratorium.edu/eclipse/how-to-view-eclipse" target="_blank">Here</a></p>
+      <p  style="font-size:30px; align:center;">For more information please click <a href="https://www.exploratorium.edu/eclipse/how-to-view-eclipse" target="_blank">Here</a></p>
       <hr>
       <h2 class="Solar">More about Projection</h2>
       <br>
       <img src="https://eclipse.aas.org/sites/eclipse.aas.org/files/Waffle-Fingers_RTF_512x323.gif">
       <br>
-      <p class="gradient" style="font-size:30px;"> A convenient method for safe viewing of the partially eclipsed Sun is pinhole projection. You simply pass sunlight through a small opening (for example, a hole punched in an index card) and project an image of the Sun onto a nearby surface (for example, another card, a wall, or the ground).
+      <p  style="font-size:30px;"> A convenient method for safe viewing of the partially eclipsed Sun is pinhole projection. You simply pass sunlight through a small opening (for example, a hole punched in an index card) and project an image of the Sun onto a nearby surface (for example, another card, a wall, or the ground).
 You don't need any special equipment to do this! Just cross the outstretched, slightly open fingers of one hand over the outstretched, slightly open fingers of the other. Then, with your back to the Sun, look at your hands’ shadow on the ground. The little spaces between your fingers will project a grid of small images on the ground. During the partial phases of the solar eclipse, these images will reveal the Sun's crescent shape, as shown in the accompanying photo.
 If your observing site has trees, look at the shadows of leaves on the ground. During the partial solar eclipse, the tiny spaces between the leaves will act as pinhole projectors, dappling the ground with images of the crescent Sun!
 Note that pinhole projection does not mean looking at the Sun through a pinhole! You project sunlight through the hole onto a surface and look at the solar image on the surface. Note too that pinhole projection is not useful for observing the total phase of a total solar eclipse; the projected image would be too faint to see. During totality, when it suddenly gets very dark, it is perfectly safe to look directly at the eclipsed Sun.</p>
