--- a/solar.html
+++ b/solar.html
@@ -91,8 +91,7 @@ var x = setInterval(function() {
       
     </head>
     <body>
-      <h1>ECLIPSES</h1>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Solar_eclipse_1999_4_NR.jpg" alt="Solar Ecipse" width="800px" height="700px">
+      <h1>ECLIPSES 2K17</h1>
       <br>
       <hr>
       <h3 class="subheader">About the Eclipse</h3>
@@ -107,10 +106,7 @@ var x = setInterval(function() {
       <hr>
       <h2 class="Solar">Here is a chart for times of Total Eclpises</h2>
       <hr>
-      <img src="https://eclipse2017.nasa.gov/sites/default/files/Table%201.png" alt="eclipse"> 
-      <hr>
-      <h2 class="ALERT" style=font-size:70px;>NOTICE: PHEONIX HAS A 70% COVERAGE RATE AT 10:33 AM</h2>
-      <hr>
+      <img src="https://eclipse2017.nasa.gov/sites/default/files/Table%201.png" alt="eclipse">
       <br>
       <h2 class="subheader">Table of ways to protect your eyes</h2>
       <table border="2" style="color:red">
