--- a/solar.html
+++ b/solar.html
@@ -84,7 +84,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("timer").innerHTML = "EXPIRED";
+    document.getElementById("timer").innerHTML = "bad news...";
   }
 }, 1000);
 </script>
@@ -101,7 +101,7 @@ var x = setInterval(function() {
       <br>
       <hr>
       <h2 style="font-size:70px; color:red;">Live Timer Until Eclipse Starts</h2>
-      <h2 id="timer" style="color:cyan; font-size:100px;"></h2>
+      <h2 id="timer" style="color:orange; font-size:100px;"></h2>
       <iframe src="https://player.twitch.tv/?stream=26045051120&channelId=151920918&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="500" width="100%"></iframe><a href="https://www.twitch.tv/streams/26045051120/channel/151920918" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch The Live Stream Here!!!</a>
       <hr>
       <h2 class="Solar">Here is a chart for times of Total Eclpises</h2>
