--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
   <html>
     <head>
-      <title>The Kosmos</title>
+      <title>Blog Bois</title>
       <link rel="stylesheet" type="text/css" href="neon.css">
       <link rel="icon" href="output.ico" type="output.ico"/>
       <link rel="shortcut icon" href="output.ico" type="output.ico"/>
@@ -26,13 +26,17 @@
     <body>
     <div text-align = "center" class="text-effect">
   <!-- Select the text in the preview and type in your own -->
-  <center><h1  class="neon" data-text="The Kosmos" contenteditable></h1></center>
+  <center><h1  class="neon" data-text="Blog Bois" contenteditable></h1></center>
   <div class="gradient"></div>
   <div class="spotlight"></div>
 </div>
+      <h3>
+        6/14/2018
+      </h3>
       <center>
-      <h1 class="kosmo">Server Ip:PVE.TheKosmosMC.com</h1>
-      <iframe width="1000" height="600" src="https://www.youtube.com/embed/mgGdPLlYiaY" frameborder="0" allowfullscreen></iframe>
+      <p>
+        I made a blog...
+      </p>
       </center>
     </body>
     
