--- a/blog.html
+++ b/blog.html
@@ -27,14 +27,14 @@
     <div text-align = "center" class="text-effect">
   <!-- Select the text in the preview and type in your own -->
   <center><h1  class="neon" data-text="Blog Bois" contenteditable></h1></center>
-        <h3>
+  <div class="gradient"></div>
+  <div class="spotlight">
+      <h3>
         6/14/2018
       </h3>
       <p>
         I made a blog...
-      </p>
-  <div class="gradient"></div>
-  <div class="spotlight"></div>
+      </p></div>
 </div>
 
     </body>
