--- a/blog.html
+++ b/blog.html
@@ -25,16 +25,15 @@
     </head>
     <body>
     <div text-align = "center" class="text-effect">
-  <!-- Select the text in the preview and type in your own -->
-  <center><h1  class="neon" data-text="Blog Bois" contenteditable></h1></center>
-  <div class="gradient"></div>
-  <div class="spotlight">
-      <h3>
+  <h2>
         6/14/2018
-      </h3>
+      </h2>
       <p>
         I made a blog...
-      </p></div>
+      </p>
+  <center><h1  class="neon" data-text="Blog Bois" contenteditable></h1></center>
+  <div class="gradient"></div>
+  <div class="spotlight"></div>
 </div>
 
     </body>
