--- a/blog.html
+++ b/blog.html
@@ -26,12 +26,12 @@
     <body>
     <div text-align = "center" class="text-effect">
   <center><h1  class="neon" data-text="Blog Bois" contenteditable></h1></center>
-  <h3>
+  <h2 class="text-effect">
   6/14/2018
-  </h3>
-  <p>
+  </h2>
+  <h4 class="text-effect">
   I made a blog...
-  </p>
+  </h4>
   <div class="gradient"></div>
   <div class="spotlight"></div>
 </div>
